# scout

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Dockerfile.frontend  INVESTIGATION-home-empty-state.md  Procfile.dev  README.md  SWITCHER-design.md  TESTING.md  TODO.md  docker-compose.yml  docker-entrypoint.sh  manage.py  pyproject.toml  tasks.py  todos.md  worktrees.json
.claude/: settings.json  setup-worktree.sh
.claude/rules/: frontend-layout.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  claude-review.yml  claude.yml  deploy-labs.yml  deploy.yml  smoke.yml  test.yml
.kamal/: secrets
.kamal/hooks/: pre-connect  pre-deploy
chainlit_app/: __init__.py  app.py  artifacts.py  auth.py
config/: __init__.py  asgi.py  celery.py  deploy-frontend.yml  deploy-mcp.yml  deploy-staging-cube.yml  deploy-staging-frontend.yml  deploy-staging-mcp.yml  deploy-staging-worker.yml  deploy-staging.yml  deploy-worker.yml  deploy.yml  procrastinate.py  settings_guard.py  staging.env  taskbadger.py  urls.py  views.py  wsgi.py
cube/: README.md  cube.js
cube_config/: Dockerfile  cube.js  package.json  start-cube-with-validator.sh  validator-core.js  validator-server.js  validator-worker.js
docs/: DEPLOYMENT.md  IMPLEMENTATION_PLAN.md  arch-review-methodology.md  data-agent-platform-addendum-2.md  data-agent-platform-addendum.md  data-agent-platform-spec.md  testing.md  zensical.toml
frontend/: .gitignore  bun.lockb  eslint.config.js  index.html  nginx.prod-kamal.conf  nginx.prod.conf  nginx.staging-kamal.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
infra/: scout-stack.yml
mcp_server/: __init__.py  __main__.py  auth.py  context.py  envelope.py  pipeline_registry.py  server.py
pipelines/: commcare_sync.yml  connect_labs_sync.yml  connect_sync.yml  ocs_sync.yml
scripts/: fetch-deploy-env.sh  resolve-database-url.sh  resolve-secrets.sh  setup_oauth_apps.py  setup_project_db.py
tests/: conftest.py  test_access_log_token_exposure.py  test_admin_lockdown.py  test_agent_audit_logging.py  test_agent_graph.py  test_agent_graph_caching.py  test_agent_graph_injection.py  test_agent_graph_model_config.py  test_agent_graph_prompt_caching.py  test_agent_semantic_routing.py  test_agent_workspace_routing.py  test_api_key_provider_registry.py  test_api_key_providers_view.py  test_api_key_strategies_commcare.py  test_api_key_strategies_ocs.py  test_artifact_attribution.py  test_artifact_soft_delete.py  test_artifacts.py  test_async_conventions.py  test_auth.py  test_auth_perimeter.py  test_auth_settings.py  test_authorizer_is_sole_gate.py  test_backfill_readonly_roles.py  test_cache_backend.py  test_catalog.py  test_chat_checkpointer_pool.py  test_chat_csrf.py  test_chat_mcp_contract.py  test_chat_rate_limit.py  test_chat_stream_escalation.py  test_chat_stream_overload.py  test_chat_stream_tool_cards.py  test_chat_thread_ownership.py  test_checkpointer_pool.py  test_ci_integrity.py  test_column_note_generator.py  test_commcare_forms_loader.py  test_commcare_knowledge_tool.py  test_commcare_loader.py  (+171 more)
(+765 files in other folders)
