[project]
name = "scout"
version = "0.1.0"
description = "Self-hosted data agent platform for AI-powered database querying"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # Django
    "django>=5.0",
    "djangorestframework>=3.15",
    "django-environ>=0.11",
    "httpx>=0.27",
    "psycopg[binary]>=3.1",
    # Auth
    "django-allauth>=65.0",
    "PyJWT[crypto]>=2.0",
    "cryptography>=42.0",
    # LangGraph / LangChain
    "langgraph>=0.2",
    "langchain-anthropic>=0.2",
    "langchain-core>=0.3",
    "langgraph-checkpoint-postgres>=2.0",
    # SQL validation
    "sqlglot>=25.0",
    # Visualization & data
    "plotly>=5.0",
    "pandas>=2.0",
    "kaleido>=0.2",
    "sqlalchemy>=2.0",
    # Security / HTML sanitization
    "bleach>=6.0",
    # Task Queue
    "procrastinate[django]>=0.28",
    # Async database (required by langgraph-checkpoint-postgres)
    "asyncpg>=0.29",
    # Utilities
    "python-dotenv>=1.0",
    # Production server
    "gunicorn>=21.0",
    "uvicorn[standard]>=0.30",
    "pyyaml>=6.0.3",
    # MCP server
    "mcp>=1.0",
    "langchain>=0.3",
    "langchain-mcp-adapters>=0.1",
    "langfuse>=4.0",
    "django-pydantic-field>=0.5.4",
    "dbt-core>=1.11.6",
    "dbt-postgres>=1.10.0",
    "whitenoise>=6.12.0",
    "sentry-sdk[django]>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "factory-boy>=3.3",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps", "config", "mcp_server"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "DJ", "S", "SIM", "TRY", "RUF", "PTH"]
ignore = [
    "E501",   # line-too-long
    "RUF012", # mutable-class-default — false positive on Django Meta/admin/serializers
    "TRY003", # raise-vanilla-args — opinionated
    "TRY300", # try-consider-else — opinionated
    "TRY301", # raise-within-try — opinionated
    "RUF002", # ambiguous-unicode-character — docstring noise
]

[tool.ruff.lint.per-file-ignores]
"config/settings/*.py" = ["E402", "F401", "F403", "F405"]
"scripts/*.py" = ["E402"]
"tests/**/*.py" = ["S101", "S105", "S106", "S107", "S110", "S608", "SIM105", "SIM117", "RUF043"]
"apps/**/tests/**/*.py" = ["S101", "S105", "S106", "S107", "S110", "S608", "SIM105", "SIM117", "RUF043"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py"]
addopts = "-v --tb=short -m 'not smoke'"
markers = [
    "smoke: end-to-end smoke tests requiring live credentials (run with: pytest -m smoke)",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.11.1",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "factory-boy>=3.3",
    "ruff>=0.5",
    "zensical>=0.0.21",
    "requests-mock>=1.12.1",
    "pytest-httpx>=0.35",
    "honcho>=1.1",
    "prek>=0.3.3",
    "invoke>=2.2",
    "freezegun>=1.5.5",
]
